<resources>
    <string name="app_name">iTrack</string>
    <string name="app_long_name">FEUTECH\'S Discipline Unit Student Violation Monitoring System</string>
    <string name="loading_title">Loading</string>
    <string name="loading_text">Loading…</string>
    <string name="copyright_text">© Systematix 2018</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet.</string>
    <string name="search_text">Search</string>

    <!-- logout -->
    <string name="logout_title">Logging out</string>

    <!-- activity titles -->
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_make_report">Report Student</string>
    <string name="title_activity_violation">Choose Violation</string>
    <string name="title_activity_violation_report">Send Report</string>

    <!-- desc -->
    <string name="background_desc">Background</string>
    <string name="logo_desc">iTrack Logo</string>
    <string name="avatar_desc">Avatar</string>
    <string name="icon_desc">Icon</string>
    <string name="nfc_desc">NFC</string>
    <string name="image_desc">Image</string>

    <!-- actions -->
    <string name="action_done">Done</string>
    <string name="action_reload">Reload</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="action_camera">Camera</string>
    <string name="action_gallery">Gallery</string>

    <!-- errors -->
    <string name="error">An error occurred.</string>
    <string name="error_frown">An error occurred :(</string>
    <string name="error_profile">Unable to load your profile.</string>
    <string name="error_no_serial">There was no serial number detected.</string>
    <string name="error_no_violation_selected">No violation selected.</string>
    <string name="error_no_auth_user">No logged in user.</string>
    <string name="error_service_unavailable">The service is unavailable.</string>
    <string name="error_cannot_load_user">Unable to load user information.</string>

    <!-- messages -->
    <string name="msg_log_in">Logged in successfully.</string>
    <string name="msg_log_out">Logged out successfully.</string>
    <string name="msg_nfc_enabled">NFC enabled!</string>
    <string name="msg_please_wait">Please wait…</string>

    <!-- login -->
    <string name="login_txt_username_hint">Username</string>
    <string name="login_txt_password_hint">Password</string>
    <string name="login_btn_login">Login</string>

    <!-- main nav drawer -->
    <string name="nav_attendance">Attendance</string>
    <string name="nav_nfc">Scan Student ID</string>
    <string name="nav_report_student">Report Student</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_logout">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- user info -->
    <string name="user_info_name">Full Name</string>
    <string name="user_info_number">ID Number</string>
    <string name="user_info_level">Year Level</string>
    <string name="user_info_level_number">%1$s Year</string>
    <string name="user_info_course">Course</string>

    <!-- nfc -->
    <!-- nfc@noPermissionState -->
    <string name="nfc_no_permission_title">Enable NFC to scan</string>
    <string name="nfc_no_permission_subtitle">You have to enable NFC in order to scan your student\'s ID.</string>
    <string name="nfc_no_permission_action">Enable NFC</string>

    <!-- nfc@enabledState -->
    <string name="nfc_enabled_title">Scan Student ID</string>
    <string name="nfc_enabled_subtitle">You can now scan your student\'s ID and create a violation.</string>

    <!-- make report -->
    <string name="make_report_action">Make Report</string>
    <string name="make_report_action_anyway">Make Report Anyway</string>
    <!-- nfc@noUserState -->
    <string name="make_report_no_user_title">Cannot load student :(</string>
    <string name="make_report_no_user_subtitle">You can still send this report now and it will be sent later.</string>

    <!-- violation -->
    <string name="violation_action">Choose Violation</string>
    <string name="violation_major_spinner_hint">Select major violation</string>
    <string name="violation_minor_spinner_hint">Select minor violation</string>
    <string name="violation_major_spinner_empty_initial_text">-- Select major violation --</string>
    <string name="violation_minor_spinner_empty_initial_text">-- Select minor violation --</string>
    <!-- violation@emptyState -->
    <string name="violation_empty_title">No violations list :(</string>
    <string name="violation_empty_subtitle">Unable to load the list of violations. Please try again.</string>
    <string name="violation_view_minor_title">Minor Violations</string>
    <string name="violation_view_minor_subtitle">Below is the list of violations %1$s may have observed. Pick one in order to proceed with this report.</string>
    <string name="violation_view_major_title">Major Violations</string>
    <string name="violation_view_major_subtitle">Below is the list of major violations.</string>
    <string name="violation_view_bottom_text">Choose the violation done by %1$s.</string>

    <!-- violation report -->
    <string name="violation_report_action">Send Report</string>
    <string name="violation_report_bottom_text">You may provide extra information about this report.</string>
    <string name="violation_report_title">Provide additional information</string>
    <string name="violation_report_subtitle">Supply other details %1$s made with the violation \"%2$s\". You can skip these fields and send the report.</string>
    <string name="violation_report_txt_location_hint">Place or location</string>
    <string name="violation_report_txt_location_placeholder">e.g. F1205, Library, or 8th Floor</string>
    <string name="violation_report_txt_message_hint">More Details</string>
    <string name="violation_report_txt_message_placeholder">Supply further information or details</string>
    <string name="violation_report_txt_age">Age</string>
    <string name="violation_report_txt_year_section">Year/Section</string>
    <string name="violation_report_txt_image_header">Attached image</string>
    <string name="violation_report_txt_image_upload">Upload an image as proof of this report.</string>
    <!-- violationReport@send -->
    <string name="violation_report_send_dialog_title">Sending Report</string>
    <string name="violation_report_send_dialog_message">Reporting %1$s for the violation: \"%2$s\"</string>
    <!-- violationReport@sent -->
    <string name="violation_report_sent_success_dialog_title">Report Sent</string>
    <string name="violation_report_sent_success_dialog_message">Your report has been sent.</string>
    <string name="violation_report_sent_fail_dialog_title">Report Saved</string>
    <string name="violation_report_sent_fail_dialog_message">Your report has been saved. It will be sent the next time the network service is available.</string>
    <string name="violation_report_sent_exception_msg">Unable to send report.</string>

    <!-- attendance -->
    <string name="attendance_view_title">Attendance Progress</string>
    <string name="attendance_view_subtitle">of %1$d hours rendered</string>
    <!-- attendance@emptyState -->
    <string name="attendance_empty_subtitle">Congratulations! You have no hours to render :)</string>
    <string name="attendance_empty_title">Oh yeah!</string>
    <!-- attendance@errorState -->
    <string name="attendance_error_title">No attendance</string>
    <string name="attendance_error_subtitle">Unable to load your attendance. Please try again.</string>

    <!-- notifications -->
    <!-- notifications@emptyState -->
    <string name="notifications_empty_title">No notifications :)</string>
    <string name="notifications_empty_subtitle">Your notifications will be shown here.</string>
</resources>
