<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_nfc"
            android:icon="@drawable/ic_nfc"
            android:title="@string/nav_nfc" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/nav_notifications" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app"
            android:title="@string/nav_logout" />
    </group>

</menu>
