<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/ic_timelapse"
            android:title="@string/nav_attendance" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>
