<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ViolationReportActivity"
    tools:showIn="@layout/activity_violation_report">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/violation_report_title"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/violation_report_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.65"
                    android:text="@string/violation_report_subtitle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/violation_report_txt_location_hint">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/violation_report_txt_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/violation_report_txt_age_layout"
                    android:hint="@string/violation_report_txt_age">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/violation_report_txt_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number|numberSigned" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/violation_report_txt_year_section_layout"
                    android:hint="@string/violation_report_txt_year_section">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/violation_report_txt_year_section"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/violation_report_txt_message_hint">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/violation_report_txt_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text|textMultiLine" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <View style="@style/Divider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="12sp"
            android:textAlignment="center"
            android:alpha="0.75"
            android:text="@string/violation_report_bottom_text" />

        <Button
            android:id="@+id/violation_report_button"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorError"
            android:text="@string/violation_report_action"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>