<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintVertical_bias="0.45"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_nfc"
                android:contentDescription="@string/nfc_desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/nfc_no_permission_title"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/nfc_no_permission_subtitle"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginTop="12dp" />

            <Button
                android:id="@+id/nfc_no_permission_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/nfc_no_permission_action"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:textSize="18sp" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>