<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintVertical_bias="0.45"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_face"
                android:contentDescription="@string/avatar_desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/make_report_no_user_title"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/make_report_no_user_subtitle"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginTop="12dp" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>