<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/violation_view_minor_title"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/violation_minor_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.65"
                    android:text="@string/violation_view_minor_subtitle" />
            </LinearLayout>

            <!--<com.google.android.flexbox.FlexboxLayout-->
                <!--android:id="@+id/violation_minor_flexbox_layout"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:paddingTop="0dp"-->
                <!--android:paddingBottom="0dp"-->
                <!--android:paddingStart="12dp"-->
                <!--android:paddingEnd="12dp"-->
                <!--app:flexWrap="wrap"-->
                <!--app:flexDirection="row"-->
                <!--app:alignItems="flex_start" />-->

            <Spinner
                android:id="@+id/violation_minor_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/violation_view_major_title"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/violation_major_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.65"
                    android:text="@string/violation_view_major_subtitle" />
            </LinearLayout>

            <!--<com.google.android.flexbox.FlexboxLayout
                android:id="@+id/violation_major_flexbox_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                android:paddingBottom="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                app:flexWrap="wrap"
                app:flexDirection="row"
                app:alignItems="flex_start" />-->

            <Spinner
                android:id="@+id/violation_major_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <View style="@style/Divider" />

        <TextView
            android:id="@+id/violation_bottom_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="12sp"
            android:textAlignment="center"
            android:alpha="0.75"
            android:text="@string/violation_view_bottom_text" />

        <Button
            android:id="@+id/violation_button"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWarningDarker"
            android:text="@string/violation_action"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>