<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/attendance_error_swipe_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintVertical_bias="0.45"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="144dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_sentiment_very_dissatisfied"
                    android:contentDescription="@string/icon_desc" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/attendance_error_title"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_marginTop="8dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/attendance_error_subtitle"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:layout_marginTop="12dp" />

                <!--<Button-->
                    <!--android:id="@+id/attendance_error_reload_btn"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:layout_marginTop="12dp"-->
                    <!--android:text="@string/action_reload" />-->
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>